[iOS] Fix ShareMenu metrics

This CL fixes the reporting the metrics of the share menu.
Previously GOOGLE_UNKNOWN was taking precedence over the ReadLater
and RequestDesktopMobile.
It also adds a metrics when the user is cancelling the share menu.

Bug: 915654
Change-Id: Ief8580866f16ce3ce68c3f197bf1a013ff0bd282
Reviewed-on: https://chromium-review.googlesource.com/c/1379895
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Peter Lee <pkl@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617770}