ios/chrome/browser/ui/activity_services/activity_service_controller.mm
@@ -9,6 +9,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/logging.h"
 #include "base/mac/foundation_util.h"
+#include "base/metrics/user_metrics.h"
+#include "base/metrics/user_metrics_action.h"
 #include "components/bookmarks/browser/bookmark_model.h"
 #include "ios/chrome/browser/bookmarks/bookmark_model_factory.h"
 #import "ios/chrome/browser/passwords/password_form_filler.h"
@@ -417,6 +419,8 @@ NSString* const kActivityServicesSnackbarCategory =
                    message:IDS_IOS_SHARE_TO_SIGN_IN_ERROR_ALERT];
       break;
     case ShareTo::SHARE_CANCEL:
+      base::RecordAction(base::UserMetricsAction("MobileShareMenuCancel"));
+      break;
     case ShareTo::SHARE_UNKNOWN_RESULT:
       break;
   }
